[metadata]
name = mrViz
version = attr: mrViz.__version__
description = An attempt to do somthing awesome with computer vision
long_description = file: README.md
author = Simon Rask
author_email = simon.rask.langkilde@gmail.com

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
            = src
install_requires =
	pandas==1.1.1
	numpy==1.19.0
	seaborn==0.10.1
	matplotlib==3.3.1
	PyYAML==5.3.1

[options.packages.find]
where = src

[options.package_data]
model = *.pkl

[options.extras_require]
dev = pytest
      pytest-cov
      flake8
      flake8-docstrings
      mypy
      pre-commit

[flake8]
max-line-length = 79
exclude =
    .git
    __pycache__
    docs
    build
    dist
    notebooks
    data

[coverage:run]
source = mrViz
omit = */__init__.py
       */__version__.py
       tests/*
branch = True

[coverage:paths]
source = mrViz
